# mthds-std

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  STABILITY.md  TODO.md  pyproject.toml
.claude/skills/new-std-method/: SKILL.md
.github/workflows/: eval.yml
.pipelex/: pipelex.toml  plxt.toml  telemetry.toml
.pipelex/inference/: backends.toml  routing_profiles.toml
.pipelex/inference/backends/: anthropic.toml  azure_openai.toml  bedrock.toml  blackboxai.toml  fal.toml  google.toml  groq.toml  huggingface.toml  internal.toml  linkup.toml  minimax.toml  mistral.toml  ollama.toml  openai.toml  openrouter.toml  pipelex_gateway.toml  pipelex_gateway_models.md  pipelex_gateway_models_plain.md  portkey.toml  scaleway.toml  vertexai.toml  xai.toml
.pipelex/inference/deck/: 1_llm_deck.toml  2_img_gen_deck.toml  3_extract_deck.toml  4_search_deck.toml  x_custom_extract_deck.toml  x_custom_llm_deck.toml
eval/: README.md  cli.py  core.py  scorers.py
eval/configs/: answer_from_documents.py  summarize.py
methods/answer_from_documents/: METHODS.toml  README.md  bundle.mthds  inputs.json
methods/summarize/: METHODS.toml  README.md  bundle.mthds  inputs.json
research/summarization/: 00_brief.md  10_papers.md  20_industry.md  30_techniques.md  40_synthesis.md  50_input_aware_design.md
